THRIFT-3307 Raise an error when trying to serialize a union with an incorrect set_field Client: Ruby Patch: Joe Ennever

This closes #597